[gd_scene load_steps=2 format=3 uid="uid://hid3tqrwnqx8"]

[ext_resource type="Script" path="res://Scripts/MenuScripts/Options/graphics.gd" id="1_m2d2n"]

[node name="ResolutionBtn" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m2d2n")

[node name="ResBtnMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 160
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 160

[node name="Labels" type="HBoxContainer" parent="ResBtnMargin"]
layout_mode = 2
theme_override_constants/separation = 140

[node name="VBoxContainer" type="VBoxContainer" parent="ResBtnMargin/Labels"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Res_label" type="Label" parent="ResBtnMargin/Labels/VBoxContainer"]
layout_mode = 2
text = "RESOLUTION_KEY"

[node name="Fullscreen_label" type="Label" parent="ResBtnMargin/Labels/VBoxContainer"]
layout_mode = 2
text = "FULLSCREEN_KEY"

[node name="Aspect_label" type="Label" parent="ResBtnMargin/Labels/VBoxContainer"]
layout_mode = 2
text = "ASPECTRATIO_KEY"

[node name="VBoxContainer2" type="VBoxContainer" parent="ResBtnMargin/Labels"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Aspect_list" type="OptionButton" parent="ResBtnMargin/Labels/VBoxContainer2"]
custom_minimum_size = Vector2(140, 23)
layout_mode = 2

[node name="Res_list" type="OptionButton" parent="ResBtnMargin/Labels/VBoxContainer2"]
layout_mode = 2

[node name="Fullscreencheck" type="CheckButton" parent="ResBtnMargin/Labels/VBoxContainer2"]
layout_mode = 2

[connection signal="item_selected" from="ResBtnMargin/Labels/VBoxContainer2/Aspect_list" to="." method="_on_aspectiratio_list_item_selected"]
[connection signal="item_selected" from="ResBtnMargin/Labels/VBoxContainer2/Res_list" to="." method="_on_res_list_item_selected"]
[connection signal="button_down" from="ResBtnMargin/Labels/VBoxContainer2/Fullscreencheck" to="." method="_on_fullscreencheck_button_down"]
[connection signal="button_up" from="ResBtnMargin/Labels/VBoxContainer2/Fullscreencheck" to="." method="_on_fullscreencheck_button_up"]
[connection signal="toggled" from="ResBtnMargin/Labels/VBoxContainer2/Fullscreencheck" to="." method="_on_fullscreencheck_toggled"]
